Change borders to outlines and fix square spacing

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,8 @@ h3 {
 .game-board {
   width: 420px;
   height: 420px;
-  border: 4px solid #98c1d9;
+  background-color: #98c1d9;
+  outline: 6px solid #98c1d9;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -64,10 +65,10 @@ h3 {
 .game-board__square {
   width: 140px;
   height: 140px;
-  border: 1px solid #98c1d9;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 3px;
 }
 
 .light-blue {
@@ -80,5 +81,5 @@ h3 {
 
 .coral {
   background-color: #ee6c4d;
-  border-color: #ffffff;
+  outline: 6px solid #ffffff;
 }
